# software-engineering

./: .gitignore  CMakeLists.txt  README.md  USAGE.txt  eventpopup.cpp  eventpopup.h  interestdata.cpp  interestdata.h  interestdata.ui  main.cpp  se.pro  utilities.qrc  verified.cpp  verified.h  verified.ui  web-app.pro
db/: createtables.sql  destroytables.sql
src/: CMakeLists.txt  eventpopup.cpp  eventpopup.h  eventpopup.ui  interestdata.h  interestdata.ui  main.cpp  matches.cpp  matches.h  matches.ui  (+4 more)
src/mobile-app/: CMakeLists.txt  application.cpp  application.h  createeventpage.cpp  createeventpage.h  createeventpage.ui  eventtablewidget.cpp  eventtablewidget.h  eventtablewidget.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.ui  matchespage.cpp  matchespage.h  matchespage.ui  matchitemwidget.cpp  matchitemwidget.h  matchitemwidget.ui  mobile-app.pro  myeventtablewidget.cpp  myeventtablewidget.h  myeventtablewidget.ui  registerpage.cpp  registerpage.h  registerpage.ui  utilities.qrc
src/mobile-app/Utilities/: Thumbs.db
src/mobile-app/android/: AndroidManifest.xml  gradle.properties~  local.properties
src/web-app/: CMakeLists.txt  application.cpp  application.h  eventpopup.cpp  eventpopup.h  eventpopup.ui  eventpopup.ui.autosave  interestdata.cpp  interestdata.h  interestdata.ui  interestdata.ui.autosave  main-page.cpp  main-page.h  main.cpp  main.cpp.autosave  matches.cpp  matches.h  matches.ui  utilities.qrc  verified.cpp  verified.h  verified.ui  web-app.pro
src/web-app/Utilities/: Thumbs.db
(+61 files in other folders)
